[project]
name = "tool-api"
version = "0.1.0"
description = "API REST en FastAPI para transformar, cargar y proporcionar datos."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "TOOL_API Team" }]

dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.30,<0.35",
    "gunicorn>=22.0,<24.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "slowapi>=0.1.9,<0.2",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "msal>=1.32,<2.0",
    "httpx>=0.27,<0.29",
    "python-multipart>=0.0.9,<0.1",
    "structlog>=24.1,<26.0",
    "prometheus-fastapi-instrumentator>=7.0,<8.0",
    "pandas>=2.2,<3.0",
    "polars>=1.0,<2.0",
    "openpyxl>=3.1,<4.0",
    "fastexcel>=0.11,<0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "respx>=0.21,<0.23",
    "ruff>=0.6,<0.8",
    "mypy>=1.11,<2.0",
    "pre-commit>=3.8,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
